# syrnike13-app

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/native/capture-helper-win/: Cargo.toml
apps/desktop/native/capture-helper-win/src/: audio_loopback.rs  command.rs  deep_filter_net3.rs  encoder.rs  frame_buffer.rs  hybrid.rs  main.rs  mf_encoder.rs  microphone.rs  monitor.rs  openh264_encoder.rs  protocol.rs  session.rs  stream.rs  target.rs  wgc.rs
apps/desktop/native/hotkey-helper-win/: CMakeLists.txt  Cargo.toml
apps/desktop/native/hotkey-helper-win/src/: input_state.cpp  input_state.hpp  key_codes.cpp  key_codes.hpp  main.cpp  main.rs  protocol.cpp  protocol.hpp
apps/desktop/native/hotkey-helper-win/tests/: hotkey_input_state_test.cpp
apps/desktop/native/media-engine-win/: Cargo.toml
apps/desktop/native/media-engine-win/.cargo/: config.toml
apps/desktop/native/media-engine-win/src/: camera_publish.rs  devices.rs  event_emitter.rs  livekit_room.rs  local_preview.rs  main.rs  mic_denoise.rs  mic_gate.rs  mic_processing.rs  mic_publish.rs  pipe.rs  protocol.rs  remote_audio.rs  remote_video.rs  room_stats.rs  screen_publish.rs  session.rs
apps/desktop/native/media-engine-win/src/capture/: audio_loopback.rs  color_convert.rs  encoder.rs  hybrid.rs  mod.rs  openh264_encoder.rs  target.rs
apps/desktop/native/native-voice-win/: CMakeLists.txt
apps/desktop/native/native-voice-win/cmake/: LiveKitSDK.cmake
apps/desktop/native/native-voice-win/src/: audio_constants.hpp  audio_devices.cpp  audio_devices.hpp  audio_processing.cpp  audio_processing.hpp  main.cpp  microphone_audio_processor.cpp  microphone_audio_processor.hpp  microphone_echo_reference.cpp  microphone_echo_reference.hpp  microphone_preview.cpp  microphone_preview.hpp  microphone_publisher.cpp  microphone_publisher.hpp  microphone_warmup.cpp  microphone_warmup.hpp  protocol.cpp  protocol.hpp  runtime_config.cpp  runtime_config.hpp  screen_audio_capture.cpp  screen_audio_capture.hpp  screen_capture_priority.cpp  screen_capture_priority.hpp  screen_preflight.cpp  screen_preflight.hpp  screen_publisher.cpp  screen_publisher.hpp  screen_sources.cpp  screen_sources.hpp  screen_video_capture.cpp  screen_video_capture.hpp  voice_gate.cpp  voice_gate.hpp
apps/desktop/native/native-voice-win/tests/: microphone_audio_processor_test.cpp  microphone_echo_reference_test.cpp  screen_capture_policy_test.cpp  voice_gate_processor_test.cpp
apps/desktop/native/overlay-detector-win/: CMakeLists.txt
apps/desktop/native/overlay-detector-win/src/: main.cpp
services/backend/crates/bonfire/: Cargo.toml  Dockerfile
services/backend/crates/bonfire/src/: channel_activity.rs  config.rs  database.rs  main.rs  voice.rs  voice_client.rs  websocket.rs
services/backend/crates/bonfire/src/events/: impl.rs  state.rs
services/backend/crates/core/coalesced/: Cargo.toml
services/backend/crates/core/coalesced/src/: config.rs  error.rs  lib.rs
services/backend/crates/core/config/: Cargo.toml  Syrnike.toml
services/backend/crates/core/config/src/: lib.rs
services/backend/crates/core/database/: Cargo.toml
services/backend/crates/core/database/src/: channel_activity.rs  lib.rs
services/backend/crates/core/database/src/amqp/: amqp.rs
services/backend/crates/core/database/src/drivers/: mod.rs  mongodb.rs  reference.rs
services/backend/crates/core/database/src/events/: client.rs  rabbit.rs  server.rs
services/backend/crates/core/database/src/models/: mod.rs
services/backend/crates/core/database/src/tasks/: ack.rs  process_embeds.rs
services/backend/crates/core/database/src/util/: acker.rs  bulk_permissions.rs  funcs.rs  idempotency.rs  permissions.rs  reference.rs
services/backend/crates/core/database/src/voice/: call_lifecycle.rs  join.rs  mod.rs  session.rs  voice_client.rs
services/backend/crates/core/database/templates/: deletion.html  deletion.original.html  deletion.txt  reset-existing.html  reset-existing.original.html  reset-existing.txt  reset.html  reset.original.html  reset.txt  suspension.html  suspension.original.html  suspension.txt  verify.html  verify.original.html  verify.txt
services/backend/crates/core/database/tests/: voice_call_lifecycle.rs  voice_reconciliation.rs
services/backend/crates/core/models/: Cargo.toml
services/backend/crates/core/models/src/: lib.rs
services/backend/crates/core/models/src/v0/: badges.rs  bots.rs  channel_invites.rs  channels.rs  feedback.rs  messages.rs  mod.rs  server_audit_logs.rs  server_members.rs  servers.rs  users.rs
services/backend/crates/core/parser/: Cargo.toml
services/backend/crates/core/permissions/: Cargo.toml
services/backend/crates/core/permissions/src/: impl.rs  test.rs  trait.rs
services/backend/crates/core/permissions/src/models/: channel.rs  (+2 more)
services/backend/crates/core/presence/: Cargo.toml
services/backend/crates/core/presence/src/: lib.rs  operations.rs
services/backend/crates/core/ratelimits/: Cargo.toml
services/backend/crates/core/ratelimits/src/: axum.rs  rocket.rs
services/backend/crates/core/result/: Cargo.toml
services/backend/crates/core/result/src/: axum.rs  lib.rs  okapi.rs  rocket.rs
services/backend/crates/daemons/crond/: Cargo.toml  Dockerfile
services/backend/crates/daemons/crond/src/: main.rs
services/backend/crates/daemons/pushd/: Cargo.toml  Dockerfile
services/backend/crates/daemons/pushd/src/: main.rs
services/backend/crates/daemons/voice-ingress/: Cargo.toml  Dockerfile
services/backend/crates/daemons/voice-ingress/src/: api.rs  guard.rs  main.rs  webhook_body.rs
services/backend/crates/delta/: Cargo.toml  Dockerfile
services/backend/crates/delta/src/: main.rs
services/backend/crates/delta/src/routes/: auth_account.rs  diagnostics.rs  feedback.rs  mod.rs  root.rs  telemetry.rs  voice_call_member_sync.rs
services/backend/crates/delta/src/util/: ratelimits.rs  test.rs
services/backend/crates/services/gifbox/: Cargo.toml  Dockerfile
services/backend/crates/services/gifbox/src/: main.rs  ratelimits.rs
(+1710 files in other folders)
