[package]
name = "syrnike-capture-helper-win"
version = "0.1.0"
edition = "2021"

[features]
default = ["screen", "microphone"]
screen = [
  "dep:memmap2",
  "dep:openh264",
  "dep:scrap",
  "dep:wasapi",
  "dep:windows",
  "dep:windows-capture",
]
microphone = [
  "dep:df",
  "dep:ndarray",
  "dep:tract-core",
  "dep:tract-hir",
  "dep:tract-onnx",
  "dep:tract-pulse",
  "dep:wasapi",
  "dep:windows",
]

[dependencies]
df = { git = "https://github.com/Rikorose/DeepFilterNet", package = "deep_filter", default-features = false, features = ["tract", "default-model"], optional = true }
ndarray = { version = "=0.15.6", optional = true }
openh264 = { version = "0.6", optional = true }
scrap = { version = "0.5", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = { version = "0.9", optional = true }
tract-core = { version = "=0.21.4", optional = true }
tract-hir = { version = "=0.21.4", optional = true }
tract-onnx = { version = "=0.21.4", optional = true }
tract-pulse = { version = "=0.21.4", optional = true }
wasapi = { version = "0.19", optional = true }
windows-capture = { version = "2.0", optional = true }
windows = { version = "0.58", optional = true, features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media_Audio",
  "Win32_Media_MediaFoundation",
  "Win32_Storage_Xps",
  "Win32_System_Com",
  "Win32_System_Variant",
  "Win32_UI_WindowsAndMessaging",
] }
