[package]
name = "syrnike-media-engine-win"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "syrnike-media-engine-win"
path = "src/main.rs"

[dependencies]
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
] }

[target.'cfg(windows)'.dependencies]
livekit = { version = "0.7", features = ["tokio", "rustls-tls-webpki-roots"] }
