[package]
name = "syrnike-media-engine-win"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "syrnike-media-engine-win"
path = "src/main.rs"

[dependencies]
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"
futures = "0.3"
tokio = { version = "1", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
] }

[target.'cfg(windows)'.dependencies]
livekit = { version = "0.7", features = ["tokio", "rustls-tls-webpki-roots"] }
scrap = "0.5"
wasapi = "0.19"
windows-capture = "2.0"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media_MediaFoundation",
  "Win32_Storage_Xps",
  "Win32_System_Com",
  "Win32_System_Variant",
  "Win32_UI_WindowsAndMessaging",
] }
