[package]
name = "syrnike-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Zomatree <me@zomatree.live>", "Paul Makles <me@insrt.uk>"]
description = "syrnike13 Backend: Message Parser"
repository = "https://github.com/syrnike13/syrnike13-app"

[dependencies]
logos = { workspace = true }
