[package]
name = "syrnike-voice-ingress"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# util
log = { workspace = true }
sentry = { workspace = true }
lru = { workspace = true }
ulid = { workspace = true }
redis-kiss = { workspace = true }
chrono = { workspace = true }

# Serde
serde_json = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }

# Http
rocket = { workspace = true, features = ["json"] }
rocket_empty = { workspace = true }

# Async
futures = { workspace = true }
async-std = { workspace = true, features = [
    "tokio1",
    "tokio02",
    "attributes",
] }

# Core
syrnike-result = { workspace = true, features = ["rocket"] }
syrnike-models = { workspace = true }
syrnike-config = { workspace = true }
syrnike-database = { workspace = true, features = ["voice"] }
syrnike-permissions = { workspace = true }

# Voice
livekit-api = { workspace = true }
livekit-protocol = { workspace = true }
livekit-runtime = { workspace = true, features = ["tokio"] }
