[package]
name = "syrnike-gifbox"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
# Serialisation
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true, features = [] }

# Web requests
reqwest = { workspace = true, features = ["json", "query"] }

# Core crates
syrnike-config = { workspace = true }
syrnike-models = { workspace = true }
syrnike-result = { workspace = true, features = ["utoipa", "axum"] }
syrnike-coalesced = { workspace = true, features = ["queue"] }
syrnike-database = { workspace = true, features = ["axum-impl"] }
syrnike-ratelimits = { workspace = true, features = ["axum"] }

# Axum / web server
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
tower-http = { workspace = true, features = ["cors"] }

# OpenAPI & documentation generation
utoipa-scalar = { workspace = true, features = ["axum"] }
utoipa = { workspace = true, features = ["axum_extras", "ulid"] }

# Logging
tracing = { workspace = true }

# Utils
lru_time_cache = { workspace = true }
